--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-touch-fullscreen" content="yes">
+        <meta id="extViewportMeta" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <title>TrainYard</title> <!-- ToDo -->
         <link data-trunk rel="copy-dir" href="assets"/>
         <link data-trunk rel="copy-dir" href="credits"/>
@@ -9,10 +12,18 @@
         <link rel="icon" href="icon.ico">
         <link data-trunk rel="inline" href="build/web/styles.css"/>
     </head>
-    <body>
+    <body style="position: fixed; width:100%; height:100%; overflow: auto;">
         <link data-trunk rel="inline" href="build/web/sound.js"/>
         <div class="game-container">
-            <canvas id="bevy">
+            <canvas id="bevy" style="
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            outline: none;
+            -webkit-tap-highlight-color: rgba(255, 255, 255, 0);">
                 Javascript and support for canvas is required
             </canvas>
         </div>
