Poor attempt at disable scrolling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="icon" href="icon.ico">
         <link data-trunk rel="inline" href="build/web/styles.css"/>
     </head>
-    <body style="position: fixed; width:100%; height:100%; overflow: auto;">
+    <body style="position: fixed; width:100%; height:100%; overflow: hidden;">
         <link data-trunk rel="inline" href="build/web/sound.js"/>
         <div class="game-container">
             <canvas id="bevy" style="
