--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-title" content="My App">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-touch-fullscreen" content="yes">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta id="extViewportMeta" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <title>TrainYard</title> <!-- ToDo -->
         <link data-trunk rel="copy-dir" href="assets"/>
         <link data-trunk rel="copy-dir" href="credits"/>
         <link data-trunk rel="copy-file" href="build/windows/icon.ico"/>
+        <link rel="manifest" href="manifest.json">
         <link rel="icon" href="icon.ico">
         <link data-trunk rel="inline" href="build/web/styles.css"/>
     </head>
@@ -16,6 +21,7 @@
         <link data-trunk rel="inline" href="build/web/sound.js"/>
         <div class="game-container">
             <canvas id="bevy" style="
+            touch-action: none;
             -webkit-touch-callout: none;
             -webkit-user-select: none;
             -khtml-user-select: none;
